--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bullseye-stock-advisor</title>
-    <meta name="description" content="Professional stock analysis dashboard with real-time recommendations and analyst insights" />
+    <title>smart-stock-recommender</title>
+    <link rel="icon" type="image/svg+xml" href="./public/smart-stock-recommender-icon.svg" />
+    <meta name="description" content="Professional stock analysis dashboard with AI recommendations and analyst insights" />
     <meta name="author" content="Stock Analysis Pro" />
     
     <!-- Google Fonts -->
