--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>smart-stock-recommender</title>
-    <link rel="icon" type="image/svg+xml" href="./public/smart-stock-recommender-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/smart-stock-recommender-icon.svg" />
     <meta name="description" content="Professional stock analysis dashboard with AI recommendations and analyst insights" />
     <meta name="author" content="Stock Analysis Pro" />
     
